chore: adiciona SLF4J logging na service e controller